--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -21,10 +21,10 @@ services:
     image: postgres:13-alpine
     restart: always
     volumes:
-      - postgres-data:/var/lib.postgresql/data
+      - postgres-data:/var/lib/postgresql/data
 
     environment:
-      - POSTGRES_db=${DB_NAME}
+      - POSTGRES_DB=${DB_NAME}
       - POSTGRES_USER=${DB_USER}
       - POSTGRES_PASSWORD=${DB_PASS}
 
