--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -35,6 +35,10 @@ services:
       - app
     ports:
       - 8000:8000
+    environment:
+      - LISTEN_PORT=8080
+      - APP_HOST=app
+      - APP_PORT=8000
     volumes:
       - static-data:/vol/static
 
