--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -34,9 +34,20 @@ services:
     depends_on:
       - app
     ports:
-      - 80:8000
+      - "80:8000"
+      - "443:443"
+    environment:
+      - SERVER_NAME=ec2-3-110-101-11.ap-south-1.compute.amazonaws.com
+      - LISTEN_PORT=8000
     volumes:
       - static-data:/vol/static
+
+  certbot:
+    image: certbot/certbot
+    volumes:
+      - ./proxy/certbot/conf:/etc/nginx/ssl
+      - ./proxy/certbot/www:/var/www/certbot
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do sleep 12h & wait $${!}; certbot renew; done;'"
 
 volumes:
   postgres-data:
