--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -34,19 +34,20 @@ services:
     depends_on:
       - app
     ports:
-      - 80:80
-      - 443:443
+      - 8080:8080
     environment:
       - SERVER_NAME=ec2-3-110-101-11.ap-south-1.compute.amazonaws.com
+      - LISTEN_PORT=8080
+      - APP_HOST=app
     volumes:
       - static-data:/vol/static
 
-  certbot:
-    image: certbot/certbot
-    volumes:
-      - ./proxy/certbot/conf:/etc/nginx/ssl
-      - ./proxy/certbot/www:/var/www/certbot
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do sleep 12h & wait $${!}; certbot renew; done;'"
+#  certbot:
+#    image: certbot/certbot
+#    volumes:
+#      - ./proxy/certbot/conf:/etc/nginx/ssl
+#      - ./proxy/certbot/www:/var/www/certbot
+#    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do sleep 12h & wait $${!}; certbot renew; done;'"
 
 volumes:
   postgres-data:
