--- a/proxy/Dockerfile
+++ b/proxy/Dockerfile
@@ -17,7 +17,7 @@ RUN mkdir -p /vol/static && \
     chown nginx:nginx /etc/nginx/conf.d/default.conf && \
     chmod +x /run.sh
 
-VOLUME /vol/static
+VOLUME /vol/static /var/www/certbot
 
 USER nginx
 
