--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,7 @@
 DB_NAME=dbname
 DB_USER=rootuser
 DB_PASS=changeme
-DJANGO_SECRET_KEY=changeme
+DJANGO_SECRET_KEY=changeme123
 DJANGO_ALLOWED_HOSTS=127.0.0.1
+ACME_DEFAULT_EMAIL=example@example.com
+DOMAIN=examle.com
