--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -13,7 +13,7 @@ services:
       - DB_USER=${DB_USER}
       - DB_PASS=${DB_PASS}
       - SECRET_KEY=${DJANGO_SECRET_KEY}
-      - ALLOWED_HOSTS=${DJANGO_ALLOWED_HOSTS}
+      - ALLOWED_HOSTS=${DOMAIN}
     depends_on:
       - db
 
@@ -29,28 +29,36 @@ services:
 
   proxy:
     build:
-      context: ./proxy
+      context: ./docker/proxy
     restart: always
     depends_on:
       - app
     ports:
       - 80:80
       - 443:443
-    environment:
-      - SERVER_NAME=ec2-3-110-101-11.ap-south-1.compute.amazonaws.com/
-      - LISTEN_PORT=80
     volumes:
-      - static-data:/vol/static
-      - ./proxy/certbot/conf:/etc/nginx/ssl     # Volume for certificates
-      - ./proxy/certbot/www:/var/www/certbot    # Volume for Certbot challenge files
+      - certbot-web:/vol/www
+      - proxy-dhparams:/vol/proxy
+      - certbot-certs:/etc/letsencrypt
+    environment:
+      - DOMAIN=${DOMAIN}
 
   certbot:
-    image: certbot/certbot
+    build:
+      context: ./docker/certbot
+    command: echo "Skipping..."
+    environment:
+      - EMAIL=${ACME_DEFAULT_EMAIL}
+      - DOMAIN=${DOMAIN}
     volumes:
-      - ./proxy/certbot/conf:/etc/nginx/ssl
-      - ./proxy/certbot/www:/var/www/certbot
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do sleep 12h & wait $${!}; certbot renew; done;'"
+      - certbot-web:/vol/www
+      - certbot-certs:/etc/letsencrypt/
+    depends_on:
+      - proxy
 
 volumes:
+  certbot-web:
+  proxy-dhparams:
+  certbot-certs:
   postgres-data:
   static-data:
