--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -13,7 +13,7 @@ services:
       - DB_USER=${DB_USER}
       - DB_PASS=${DB_PASS}
       - SECRET_KEY=${DJANGO_SECRET_KEY}
-      - ALLOWED_HOSTS=${DOMAIN}
+      - ALLOWED_HOSTS=${DJANGO_ALLOWED_HOSTS}
     depends_on:
       - db
 
@@ -29,36 +29,15 @@ services:
 
   proxy:
     build:
-      context: ./docker/proxy
+      context: ./proxy
     restart: always
     depends_on:
       - app
     ports:
-      - 80:80
-      - 443:443
+      - 80:8000
     volumes:
-      - certbot-web:/vol/www
-      - proxy-dhparams:/vol/proxy
-      - certbot-certs:/etc/letsencrypt
-    environment:
-      - DOMAIN=${DOMAIN}
-
-  certbot:
-    build:
-      context: ./docker/certbot
-    command: echo "Skipping..."
-    environment:
-      - EMAIL=${ACME_DEFAULT_EMAIL}
-      - DOMAIN=${DOMAIN}
-    volumes:
-      - certbot-web:/vol/www
-      - certbot-certs:/etc/letsencrypt/
-    depends_on:
-      - proxy
+      - static-data:/vol/static
 
 volumes:
-  certbot-web:
-  proxy-dhparams:
-  certbot-certs:
   postgres-data:
   static-data:
