--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -40,6 +40,7 @@ services:
       - certbot-web:/vol/www
       - proxy-dhparams:/vol/proxy
       - certbot-certs:/etc/letsencrypt
+      - static-data:/vol/static
     environment:
       - DOMAIN=${DOMAIN}
 
