--- a/docker/proxy/Dockerfile
+++ b/docker/proxy/Dockerfile
@@ -6,7 +6,15 @@ ENV APP_HOST=app
 ENV APP_PORT=9000
 
 RUN apk add --no-cache openssl bash
-RUN chmod +x /run.sh
+
+USER root
+
+RUN mkdir -p /vol/static /vol/web/media && \
+    chmod 755 /vol/static vol/web/media && \
+    touch /etc/nginx/conf.d/default.conf && \
+    chown nginx:nginx /etc/nginx/conf.d/default.conf && \
+    chmod +x /run.sh
+
 
 VOLUME /vol/static
 VOLUME /vol/www
