--- a/docker/proxy/Dockerfile
+++ b/docker/proxy/Dockerfile
@@ -9,14 +9,13 @@ RUN apk add --no-cache openssl bash
 
 USER root
 
-RUN mkdir -p /vol/static /vol/web/media && \
-    chmod 755 /vol/static vol/web/media && \
+RUN mkdir -p /vol/static  && \
+    chmod 755 /vol/static  && \
     touch /etc/nginx/conf.d/default.conf && \
     chown nginx:nginx /etc/nginx/conf.d/default.conf && \
     chmod +x /run.sh
 
 
 VOLUME /vol/static
-VOLUME /vol/www
 
 CMD ["/run.sh"]
